completed basic layout in html

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
     max-height: 100vh;
     display: grid;
     grid-template-columns: 1fr 5fr;
-    grid-template-rows: 1fr 2fr 4fr;
+    grid-template-rows: 50px 125px 1fr;
     grid-template-areas: 
     "sidebar header"
     "sidebar nav"
@@ -43,5 +43,22 @@ header {
 
 .content {
     grid-area: cont; 
+    display: grid;
+    grid-template: 1fr 1fr/3fr 1fr;
+    grid-template-areas: 
+    "projects announcements"
+    "projects trending";
+}
+
+.projects {
+    grid-area: projects;
+}
+
+.announcements {
+    grid-area: announcements;
+}
+
+.trending {
+    grid-area: trending;
 }
 
