--- a/styles.css
+++ b/styles.css
@@ -4,15 +4,17 @@
 }
 
 body {
-    max-width: 100vw;
-    max-height: 100vh;
+    min-height: 100vh;
+    min-width: 100vw;
     display: grid;
-    grid-template-columns: 1fr 5fr;
-    grid-template-rows: 50px 125px 1fr;
+    grid-template-columns: 1fr 7fr;
+    grid-template-rows: 70px 130px 1fr;
     grid-template-areas: 
     "sidebar header"
     "sidebar nav"
     "sidebar cont";
+    background-color: #94a3b8;
+    align-content: stretch;
 }
 
 header {
@@ -20,13 +22,37 @@ header {
     display: grid;
     grid-template-columns: auto 0.75fr auto auto auto;
     gap: 30px;
-    padding: 10px;
+    padding: 20px;
+    background-color: white;
+}
+
+header img {
+    max-width: 40px;
+    max-height: 40px;
+}
+
+input[type="text"] {
+    justify-self: start;
+    min-width: 75%;
+    min-height: auto;
+    background-color: #94a3b8;
+    border-radius: 50px;
+    border: none;
 }
 
 .sidebar {
     grid-area: sidebar;
     display: grid;
-    grid-template-rows: 1fr 2fr 3frs;
+    grid-template-rows: 1fr 2fr 3fr;
+    background-color: #0ea5e9;
+    font-weight: 700;
+    padding: 20px;
+    color: white;
+}
+
+.sidebar ul li{
+    list-style: none;
+    font-size: 1.3rem;
 }
 
 .nav {
@@ -35,30 +61,60 @@ header {
     grid-template-columns: auto 0.75fr auto auto auto;
     justify-content: space-around;
     align-content: center;
+    background-color: white;
 }
 
 .nav button {
     min-width: 100px;
+    background-color: #0ea5e9;
+    border-radius: 30px;
+    box-shadow: none;
+    border: none;
+    color: white;
+    font-weight: 700;
+    font-size: 1.1rem;
 }
 
 .content {
     grid-area: cont; 
     display: grid;
-    grid-template: 1fr 1fr/3fr 1fr;
+    grid-template: 1fr 1fr/4fr 1fr;
     grid-template-areas: 
     "projects announcements"
     "projects trending";
+    gap: 25px;
+    padding: 20px;
 }
 
 .projects {
     grid-area: projects;
+    display: grid;
+    grid-template: 1fr 1fr 1fr/1fr 1fr;
+    gap: 15px;
+}
+
+.projects div {
+    background-color: white;
+    border-radius: 10px;
+    border-left: 10px solid #d97706;
+    padding: 20px;
 }
 
 .announcements {
     grid-area: announcements;
+    background-color: white;
+    border-radius: 10px;
+    padding: 20px;
+    justify-self: stretch;
+    align-self: stretch;
 }
 
 .trending {
     grid-area: trending;
+    background-color: white;
+    border-radius: 10px;
+    padding: 20px;
+    justify-self: stretch;
+    align-self: stretch;
 }
 
